todo part completed

--- a/src/app/main/apps/todo/dialogs/task/task-dialog.html
+++ b/src/app/main/apps/todo/dialogs/task/task-dialog.html
@@ -47,7 +47,7 @@
                 <text-angular ng-model="vm.task.notes"></text-angular>
             </div>
 
-            <div class="attachment-list">
+            <!--<div class="attachment-list">
                 <div class="attachment" layout="row" layout-align="space-between center">
                     <div>
                         <span class="filename">attachment-2.doc</span>
@@ -70,7 +70,7 @@
                         <md-icon md-font-icon="icon-close" class="s16"></md-icon>
                     </md-button>
                 </div>
-            </div>
+            </div>!-->
         </md-dialog-content>
 
         <md-dialog-actions layout="row" layout-align="space-between center">
@@ -89,7 +89,7 @@
                     ADD TASK
                 </md-button>
 
-                <md-button class="md-icon-button" aria-label="Attach file" translate
+               <!-- <md-button class="md-icon-button" aria-label="Attach file" translate
                            translate-attr-aria-label="TODO.ATTACH_FILE">
                     <md-icon md-font-icon="icon-paperclip"></md-icon>
                 </md-button>
@@ -97,7 +97,7 @@
                 <md-button class="md-icon-button" aria-label="Insert picture" translate
                            translate-attr-aria-label="TODO.INSERT_PICTURE">
                     <md-icon md-font-icon="icon-file-image-box"></md-icon>
-                </md-button>
+                </md-button>!-->
             </div>
 
             <div layout="row">
